src/app/features/blog/components/post-card/post-card.component.scss
@use "/src/styles/palette" as palette;

.post-card {
  position: relative;
  margin: 1.5rem auto;
  padding: 1.5rem 2rem;
  height: 100%;

  min-height: 35vh;

  display: flex;
  flex-direction: column;
  justify-content: space-between;

  overflow: hidden;

  background: palette.$background-gradient-start;
  border-radius: 16px;

  box-shadow: 0 8px 24px rgba(255, 255, 255, 0.08);

  &__bg {
    position: absolute;
    inset: 1rem;
    background-size: cover;
    background-position: center;
    border-radius: 12px;
    z-index: 0;
  }

  &__overlay {
    position: absolute;
    inset: 1rem;
    background: rgba(palette.$background-gradient-start, 0.8);
    border-radius: 12px;
    z-index: 0;
  }

  &__content {
    position: relative;
    z-index: 1;
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
  }

  .post-card-header {
    &__meta {
      display: flex;
      justify-content: flex-end;
      align-items: flex-end;
      flex-direction: column;
    }

    .category-badge {
      display: flex;
      align-items: center;
      gap: 4px;
      padding: 2px 5px 2px 5px;
      border-radius: 4px;
      background: rgba(palette.$accent-blue, 0.1);

      &__line {
        width: 2px;
        height: 14px;
        border-radius: 2px;
        background: palette.$accent-blue;
      }

      &__text {
        color: lighten(palette.$accent-blue, 15%);
        font-size: 10px;
        font-weight: 500;
        letter-spacing: 0.3px;
        text-transform: uppercase;
      }
    }

    &__date {
      margin-top: 0.5rem;
      color: palette.$text-secondary;
      font-style: italic;
      text-align: right;
    }

    &__title {
      color: palette.$accent-yellow;
      margin: 0 0 0.75rem 0;
      text-align: center;
      font-size: 2rem;
    }
  }

  .excerpt {
    text-align: center;
  }

  .post-footer {
    display: flex;
    justify-content: center;
  }
}

